<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_LightGray"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/ll_circle"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/color_LightGray"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <com.guugoo.jiapeiteacher.view.CircleImageView
                android:id="@+id/civ_head"
                android:layout_width="@dimen/iv_main_circle"
                android:layout_height="@dimen/iv_main_circle"
                android:scaleType="centerCrop"
                android:src="@mipmap/icon_head"
                app:border_color="@color/color_Blue"
                app:border_width="2dp" />

            <TextView
                android:id="@+id/tv_nickName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/color_Dark" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout style="@style/Person_RelativeLayout_Style">

        <TextView
            style="@style/Person_TextView_Style"
            android:text="@string/coach_name" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dp"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout style="@style/Person_RelativeLayout_Style">

        <TextView
            style="@style/Person_TextView_Style"
            android:text="@string/coach_cardId" />

        <TextView
            android:id="@+id/cardId_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dp"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout style="@style/Person_RelativeLayout_Style">

        <TextView
            style="@style/Person_TextView_Style"
            android:text="@string/coach_phone" />

        <TextView
            android:id="@+id/phone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dp"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout style="@style/Person_RelativeLayout_Style">

        <TextView
            style="@style/Person_TextView_Style"
            android:text="@string/coach_school" />

        <TextView
            android:id="@+id/school_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dp"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout style="@style/Person_RelativeLayout_Style">

        <TextView
            style="@style/Person_TextView_Style"
            android:text="@string/coach_carNo" />

        <TextView
            android:id="@+id/carNo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dp"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/space_select_layout"
        style="@style/Person_RelativeLayout_Style">

        <TextView
            style="@style/Person_TextView_Style"
            android:text="@string/coach_space_select" />

        <TextView
            android:id="@+id/space_select_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/space_select_img"
            android:hint="@string/space_select_hint"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/space_select_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dp"
            android:src="@mipmap/right_light" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/coach_login_confirm"
        style="@style/Person_RelativeLayout_Style"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/coach_login_confirm"
            android:textColor="@color/color_Black"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:background="@color/color_White" />

</LinearLayout>
