<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.guugoo.jiapeiteacher.activity.MyReservationActivity">

    <include
        android:id="@+id/head"
        layout="@layout/include_head"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/total"
            android:textColor="@color/color_Black"
            android:textSize="@dimen/rightSp"/>

        <View
            android:layout_width="0.8dp"
            android:layout_height="match_parent"
            android:background="@color/color_line"/>

        <TextView
            android:id="@+id/tv_has_reservation"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/has_reservation"
            android:textColor="@color/color_Black"
            android:textSize="@dimen/rightSp"/>

        <View
            android:layout_width="0.8dp"
            android:layout_height="match_parent"
            android:background="@color/color_line"/>

        <TextView
            android:id="@+id/tv_pending_payment"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/has_ended"
            android:textColor="@color/color_Black"
            android:textSize="@dimen/rightSp"/>

        <View
            android:layout_width="0.8dp"
            android:layout_height="match_parent"
            android:background="@color/color_line"/>

        <TextView
            android:id="@+id/tv_has_ended"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/has_cancel"
            android:textColor="@color/color_Black"
            android:textSize="@dimen/rightSp"/>

    </LinearLayout>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@color/color_line"/>

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </FrameLayout>


</LinearLayout>
